--- a/viewCustomerDetails.html
+++ b/viewCustomerDetails.html
@@ -23,13 +23,20 @@
     
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-12">
-                    <div>
+                    <input type="submit" value="Load" id="btnAdd" onclick="loadCusDetails()">
+                    <div>                       
                         <table border="1" id="cahierViewtbl">
+                            <thead>
                             <th>Cus ID</th>
                             <th>Name</th>
                             <th>Address</th>
                             <th>Contact</th>
                             <th>NIC</th>
+                            </thead>
+
+                            <tbody>
+
+                            </tbody>
                         </table>
                     </div>
                 </div>
@@ -39,6 +46,9 @@
             </div>
             
         </div>
+
+    <script src="app3.js"></script>
     <script src="app.js"></script>
+    <script src="app2.js"></script>
 </body>
 </html>
